fix: quality wrap height

--- a/packages/material/scss/mediaplayer/_theme.scss
+++ b/packages/material/scss/mediaplayer/_theme.scss
@@ -17,6 +17,10 @@
         .k-mediaplayer-volume-wrap {
             padding: 6px 0;
         }
+
+        .k-mediaplayer-quality-wrap > .k-mediaplayer-quality {
+            padding: 0 16px;
+        }
     }
 
 }
